fixed the issue with the select field showing selected text close to border and not center aligned.

--- a/src/components/table-filters/tableFilters.css
+++ b/src/components/table-filters/tableFilters.css
@@ -1,4 +1,4 @@
-.filter-input {
+.filter-field {
     border-radius: 4px;
     margin-top: 5px;
     height: 38px;
@@ -6,6 +6,6 @@
     width: 100%;
 }
 
-.filter-input div{
+.text-input div {
     height: 38px !important;
 }
